<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/continueWith"
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearlayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_marginStart="40sp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonFb"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_socialmedia"
            android:drawableLeft="@drawable/fb"
            android:drawablePadding="5dp"
            android:includeFontPadding="false"
            android:padding="9dp"
            android:paddingRight="10dp"
            android:text="@string/facebook"
            android:textColor="@color/gray"
            android:textSize="18sp"
           />

        <Button
            android:id="@+id/buttonGoogle"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_socialmedia"
            android:drawableLeft="@drawable/google_icon"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="12dp"

            android:text="@string/Google"
            android:textColor="@color/gray"
            android:textSize="18sp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayour3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayout2"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:text="@string/alreadyAccount" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="2dp"
            android:text="@string/SignIn"
            android:textColor="@color/lightBlue"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/now" />

    </LinearLayout>

</RelativeLayout>