<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

   <include
       android:id="@+id/include"
       layout="@layout/toolbar_signin">

   </include>


    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/include"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/cart" />


    <TextView
        android:id="@+id/TextViewSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/SignUpMsg"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextViewSignup"
        android:layout_centerInParent="false"
        android:layout_marginTop="9dp"
        android:paddingRight="6dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextFullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/linearLayout"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="9dp"
            android:drawableLeft="@drawable/avatar"
            android:drawablePadding="4dp"
            android:ems="10"
            android:hint="@string/fullName"
            android:inputType="textPersonName"
            android:paddingLeft="6dp" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="9dp"
            android:drawableLeft="@drawable/phonecall"
            android:drawablePadding="4dp"
            android:ems="10"
            android:hint="@string/mobileNumber"
            android:inputType="phone"
            android:paddingRight="6dp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="9dp"
            android:drawableLeft="@drawable/mail"
            android:drawablePadding="4dp"
            android:ems="10"
            android:hint="@string/EmailAddress"
            android:inputType="textEmailAddress"
            android:paddingRight="6dp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="20sp"
            android:drawableLeft="@drawable/locked"
            android:drawablePadding="4dp"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:paddingLeft="6dp" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonCreateAccount"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_below="@id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17sp"
        android:background="@drawable/button_style"
        android:text="@string/CreateAccount"
        android:textColor="@color/white"
        android:textSize="20sp" />


<FrameLayout
    android:id="@+id/fragmentLayoutSignup"
    android:layout_below="@+id/buttonCreateAccount"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"></FrameLayout>
</RelativeLayout>