<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar_signin">

    </include>


    <ImageView
        android:layout_below="@id/include"
        android:id="@+id/imageViewLogo"
        android:layout_width="wrap_content"
        android:scaleType="center"
        android:layout_height="wrap_content"
        android:src="@drawable/cart"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="8dp"/>


    <TextView
        android:id="@+id/textview_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewLogo"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/SignInMsg"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_1"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="6dp"
        android:drawableLeft="@drawable/avatar"
        android:drawablePadding="4dp"
        android:ems="10"
        android:hint="@string/EmailAddress"
        android:inputType="textEmailAddress"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:textColor="@color/gray" />


    <EditText
        android:id="@+id/editText_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_email"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="6dp"
        android:drawableLeft="@drawable/locked"
        android:drawablePadding="4dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:textColor="@color/gray" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_password"
        android:layout_marginTop="15dp"
        android:text="FORGOT PASSWORD? "
        android:layout_alignParentRight="true"
        android:textColor="#000000"
        android:layout_marginRight="10dp"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_signIn"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_below="@+id/tv_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_style"
        android:capitalize="characters"
        android:text="@string/SignIn"
        android:textColor="#ffffff"
        android:textSize="20sp" />


<FrameLayout
    android:id="@+id/fragmentLayoutLogin"
    android:layout_below="@+id/btn_signIn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"></FrameLayout>
</RelativeLayout>