<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    tools:context=".CartActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar_signin"></include>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="8dp"
        android:elevation="0dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/include"
        tools:layout_editor_absoluteX="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView60"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/textViewTotalAmount"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/PayableAmount"
                android:textColor="@color/black"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/textViewTotalAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="Rs. 2,370"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView60"
                android:layout_alignEnd="@id/textView60"
                android:layout_marginBottom="30dp"
                android:text="(9 Items)" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@id/textViewItems"
                android:layout_centerInParent="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_style"
                android:text="@string/MakePayment"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="154px" />

        <android.support.design.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_gravity="bottom"
            app:backgroundTint="@color/white"
            app:buttonGravity="bottom|top"
            app:fabAlignmentMode="center"
            app:fabCradleMargin="0dp"
            app:fabCradleRoundedCornerRadius="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">


                <TextView
                    android:id="@+id/textViewHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="20dp"
                    android:drawableTop="@drawable/ic_home"
                    android:padding="5dp"
                    android:text="@string/Home"
                    android:textColor="@color/gray"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textViewCategories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="30dp"
                    android:layout_toRightOf="@id/textViewHome"
                    android:drawableTop="@drawable/ic_category"
                    android:padding="5dp"
                    android:text="@string/Categories"
                    android:textColor="@color/gray"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textViewCart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="40dp"
                    android:layout_toLeftOf="@id/textViewAccount"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/shopping_bag"
                    android:padding="5dp"
                    android:text="@string/Cart"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textViewAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="20dp"
                    android:drawableTop="@drawable/ic_user"
                    android:padding="5dp"
                    android:text="@string/Account"
                    android:textColor="@color/gray"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/textViewCart"
                    android:layout_centerHorizontal="true"
                    android:text="@string/Trending"
                    android:textColor="@color/gray"
                    android:textSize="12sp" />

            </RelativeLayout>
        </android.support.design.bottomappbar.BottomAppBar>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/setWallpaper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/search"
            app:backgroundTint="@color/white"
            app:fabSize="normal"
            app:layout_anchor="@id/bottomAppBar"
            app:useCompatPadding="true" />

    </android.support.design.widget.CoordinatorLayout>
</android.support.constraint.ConstraintLayout>